--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Login</title>
     <link rel="stylesheet" href="/css/global.css">
 </head>
@@ -40,8 +38,6 @@
     const usernameInp = document.getElementById("username");
     const passwordInp = document.getElementById("password");
     const errorDiv = document.getElementById("error-div");
-    const token = document.querySelector('meta[name="_csrf"]').content;
-    const headerName = document.querySelector('meta[name="_csrf_header"]').content;
     form.addEventListener("submit",function (event){
         event.preventDefault();
         const username = usernameInp.value
@@ -50,8 +46,7 @@
         fetch("api/v1/login",{
             method: "POST",
             headers:{
-                "Content-Type":"application/json",
-                [headerName]:token
+                "Content-Type":"application/json"
             },
             body:JSON.stringify(data)
             }
